plans/v3/07-hermes-integration.md
# Hermes 集成配置（v3）

> 修订记录：v3 修正 glm5turbo-v2 审计 P0#3(Hermes config.yaml 格式，headers 字段传递认证)；
> v2 修正 P0#1 URL 路径与自定义 mux 一致

## Hermes config.yaml 配置

在 Hermes 的 `~/.hermes/config.yaml` 中添加 MCP server 配置。
Hermes 通过 `url` 字段的存在性判断 transport 类型（有 url = HTTP，无 url = stdio）。
不需要 `transport` 字段。认证通过 `headers` 字典传递，支持 `${ENV_VAR}` 环境变量插值。

```yaml
mcp_servers:
  hermes-browser:
    url: "http://192.168.199.54:19875/mcp"
    headers:
      Authorization: "Bearer ${MCP_BROWSER_TOKEN}"
    timeout: 180
    connect_timeout: 60
```

## Token 配置说明

MCP Server 使用 Bearer token 认证。Hermes 的 MCP HTTP client 会通过
`http_client` 传递 Authorization header。

### 首次启动获取 Token

1. 设置环境变量（供 Hermes 使用）：
   ```bash
   export MCP_BROWSER_TOKEN="your-chosen-token"
   ```
2. 在 MCP Server 的 `config.yaml` 中设置相同 token：
   ```yaml
   token: "your-chosen-token"
   ```
3. 或者不配置 token，首次启动时自动生成并保存到 `~/.hermes-browser/.token`，
   从该文件读取值设置到环境变量

### 自动生成 Token

如果 `token` 配置为空，MCP Server 首次启动时自动生成 64 字符 hex token，
保存到 `~/.hermes-browser/.token` 文件并打印到 stderr。

```bash
# 查看自动生成的 token
cat ~/.hermes-browser/.token
```

## URL 路径说明

MCP Server 的 HTTP endpoint 路径为 `/mcp`：
- mcp-go `StreamableHTTPServer` 默认 endpoint 是 `/mcp`
- 自定义 mux 中 `mux.Handle("/mcp", ...)` 保持一致
- Hermes 的 `mcp_tool.py` 使用 `streamable_http_client(url, ...)` 原样传递 URL
- **必须包含 `/mcp` 路径后缀**

完整 URL 示例：
```
http://192.168.199.54:19875/mcp
```

## WebSocket 配置（Chrome Extension 端）

Chrome Extension 的 Popup 面板中配置：
- WebSocket 地址：`ws://192.168.199.54:19876`
- Token：与 MCP Server 配置中的 token 一致

如果 MCP Server 和 Chrome 在同一台机器上，可以用：
- WebSocket 地址：`ws://127.0.0.1:19876`

## 网络拓扑

```
Hermes Agent (tai-worker: 192.168.44.2)
    |
    | HTTP POST http://192.168.199.54:19875/mcp
    | Authorization: Bearer <token>
    |
MCP Server (192.168.199.54:19875 + 19876)
    |
    | WebSocket ws://192.168.199.54:19876?token=<token>
    |
Chrome Extension (Background Service Worker)
    |
Content Script (按需注入目标页面)
```

## 防火墙配置

确保以下端口可达：
- 19875/TCP — MCP HTTP transport（Hermes → MCP Server）
- 19876/TCP — WebSocket（Chrome Extension → MCP Server）

如果使用默认配置（WebSocket 仅监听 127.0.0.1），
Chrome 和 MCP Server 必须在同一台机器上。

如果需要跨机器 WebSocket 连接（不推荐，增加暴露面）：
```yaml
websocket:
  bind: "0.0.0.0:19876"
```

## 验证步骤

1. 启动 MCP Server：
   ```bash
   ./hermes-browser -c config.yaml
   ```

2. 加载 Chrome Extension：
   - 打开 `chrome://extensions/`
   - 开启 "开发者模式"
   - 点击 "加载已解压的扩展程序"
   - 选择 `extension/` 目录

3. 在 Extension Popup 中配置 WebSocket 地址和 Token，点击连接

4. 验证 MCP 连接：
   ```bash
   # 从 Hermes 机器测试 HTTP 连通性
   curl -X POST http://192.168.199.54:19875/mcp \
     -H "Authorization: Bearer <token>" \
     -H "Content-Type: application/json" \
     -d '{"jsonrpc":"2.0","id":1,"method":"initialize","params":{...}}'
   ```

5. 在 Hermes 中验证工具发现：
   - 工具名以 `mcp_browser_` 前缀
   - 应该看到 15 个工具

## stdio 模式（备选）

如果 Hermes 和 MCP Server 在同一台机器上，可以使用 stdio transport：

```yaml
mcp_servers:
  hermes-browser:
    transport: stdio
    command: "/path/to/hermes-browser"
    args: ["-c", "/path/to/config.yaml"]
    # server.http.bind 留空，程序自动使用 stdio 模式
    # WebSocket 仍然需要配置 bind，供 Chrome Extension 连接
```

stdio 模式下：
- MCP 通信通过 stdin/stdout
- WebSocket 仍然独立运行
- 程序会检测 stdin 是否为 pipe，非 pipe 时打印警告
